Bug 408925: XRE_InitEmbedding does not initialize properly profilelock and gDirServiceProvider. r=bsmedberg